--- a/Unit Converter/Unit Converter.csproj
+++ b/Unit Converter/Unit Converter.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Forms\MainScreen.Designer.cs">
       <DependentUpon>MainScreen.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\UnitTypeClasses.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\AboutBox.resx">
