Fix comments and separate StatusMessages static class to own file

--- a/Unit Converter/Unit Converter.csproj
+++ b/Unit Converter/Unit Converter.csproj
@@ -87,7 +87,8 @@
     <Compile Include="Forms\MainScreen.Designer.cs">
       <DependentUpon>MainScreen.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\UnitTypeClasses.cs" />
+    <Compile Include="Resources\StatusMessages.cs" />
+    <Compile Include="Resources\UnitTypeClasses.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\AboutBox.resx">
@@ -131,8 +132,6 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Constants\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
