--- a/Unit Converter/Unit Converter.csproj
+++ b/Unit Converter/Unit Converter.csproj
@@ -66,7 +66,8 @@
     <ApplicationIcon>UnitConverterLogo.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Unit_Converter.Program</StartupObject>
+    <StartupObject>
+    </StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
